# Scrapy_parser

./: README.md  pyproject.toml  result.json
alkoteka_parser/: items.py  middlewares.py  settings.py
alkoteka_parser/spiders/: alkoteka_spider.py
